# DeepVHPPI

./: .gitignore  DeepVHPPI Manual.ipynb  DeepVHPPI_manual.ipynb  README.md  config_args.py  dataset.py  main.py  pyproject.toml  test_lm.py  train_lm.py  train_pair.py
data/: cd_hit_combine_fastas.py  cd_hit_create_fasta_files.py  cd_hit_parse_cluster_download.py  cd_hit_parse_cluster_file.py  create_train_test_list.py  fasta_to_pandas.py  fastas_to_interaction.py  hpidb_create_interaction_dataset.py  hpidb_datasets_to_training_test_json.py  pandas_create_from_dict.py  pandas_to_fasta.py  process_hpidb_mtb.py  process_pfam.py  process_zhou_ppi_data.py  uniprot_get_random_sequences.py  vocab.data  vocab.py
data/utils/: cd_hit_2D.sh
fb_esm/: embedding.py  multihead_attention.py
local_packages/extract_from_fasta/: __init__.py
model/: embedding.py  layers.py  model_initializer.py  models.py  utils.py
notebooks/: Bacterial Model Training_26_04-2020.ipynb  Evaluate Results.ipynb  Experiment 1- Bias Evaluation of DeepVHPPI.ipynb  General Thoughts On PPI and ML.ipynb  Sequence Data Processing.ipynb  Under The Hood.ipynb  Zhou Model Training_27_04_2020.ipynb
notebooks/results/26-4-2022/: test_log.json  train_log.json  valid_log.json
test_dir/: test_embed.py
utils/: metrics.py  plot_metrics.ipynb  plot_metrics.py
utils/uniprot_query/: __init__.py
